--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
-  "dependencies": {
-    "express": "^4.19.2"
+  "scripts": {
+    "start": "node server.js",
+    "build": "webpack"
+  },
+  "name": "hw_38",
+  "description": "",
+  "version": "1.0.0",
+  "main": "server.js",
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "express": "^4.19.2",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
