--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "express": "^4.19.2",
+    "mini-css-extract-plugin": "^2.9.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
